--- a/merch.html
+++ b/merch.html
@@ -7,7 +7,7 @@
     <!-- social media icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/font-awesome.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Events</title>
+    <title>Merch</title>
 </head>
 <body class="home-body">
     <header>
