--- a/everythingiknowaboutlovetour.html
+++ b/everythingiknowaboutlovetour.html
@@ -7,7 +7,7 @@
     <!-- social media icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/font-awesome.min.css">
     <!-- font -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=IM+Fell+Double+Pica">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nanum+Pen+Script">
     <!-- icon -->
     <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
