--- a/everythingiknowaboutlovetour.html
+++ b/everythingiknowaboutlovetour.html
@@ -153,7 +153,7 @@
                     </div>
                 </div>
             </div>
-            <p>thanks for reading! check out more concert recaps by navigating to the menu above.</p>
+            <p>Thanks for reading! Check out more concert recaps by navigating to the menu above.</p>
         </div>
     </main>
     <footer class="footer">
