--- a/everythingiknowaboutlovetour.html
+++ b/everythingiknowaboutlovetour.html
@@ -84,7 +84,7 @@
                     <img src="https://i.scdn.co/image/ab67616d0000b27348341e864d4b4881f56f01b4" alt="everything i know about love">
                     <h1>everything i know about love</h1>
                     <div class="cd_links">
-                        <a href="https://www.youtube.com/watch?v=z2PzxLwA4rM aria-label="youtube"><i class="fa-brands fa-youtube"></i></a>
+                        <a href="https://www.youtube.com/watch?v=z2PzxLwA4rM" aria-label="youtube"><i class="fa-brands fa-youtube"></i></a>
                         <a href="https://open.spotify.com/album/7d4HvdYRjnHj52dYri9NqA?si=XnX1XGfUTeiUYvp9ZdAZzQ" aria-label="spotify"><i class="fa-brands fa-spotify"></i></a>
                         <a href="https://music.apple.com/us/album/everything-i-know-about-love-single/1615605243" aria-label="apple music"><i class="fa-brands fa-apple"></i></a>
                     </div>
