--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- font -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nanum+Pen+Script">
     <!-- icon -->
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
 </head>
@@ -19,16 +19,16 @@
         <nav>
             <div class="skip"><a href="#main">Skip to Main Content</a></div>
             <div class="nav-container" id="home-nav">
-                <h1 class="name"><a href="index.html">Home</a></h1>
+                <h1 class="name"><a href="index.html">home</a></h1>
             <div class="menu_bars">
                 <div class="bar1"></div>
                 <div class="bar2"></div>
                 <div class="bar3"></div>
             </div>
             <ul class="nav_list">
-                <li class="nav_item"><a href="buildaproblemtour.html">Dodie</a></li>
-                <li class="nav_item"><a href="sourtour.html">Olivia Rodrigo</a></li>
-                <li class="nav_item"><a href="everythingiknowaboutlovetour.html">Laufey</a></li>
+                <li class="nav_item"><a href="buildaproblemtour.html">dodie</a></li>
+                <li class="nav_item"><a href="sourtour.html">olivia rodrigo</a></li>
+                <li class="nav_item"><a href="everythingiknowaboutlovetour.html">laufey</a></li>
             </ul>
             <div class="socials">
                 <a href="https://www.instagram.com/abbyysyp/?hl=en" aria-label="instagram"><i class="fa-brands fa-instagram"></i></a>
