--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <main id="main">
         <div id="home-about" class="about">
             <div>
-                <h1>About Me</h1>
+                <h1>about me</h1>
             <img id="self" src="images/self_portrait.png" alt="a photo of myself">
             </div>
             <div>
@@ -56,7 +56,7 @@
             </div>
         </div>
         <div class="home-section" class="about">
-            <h1>Featured Concerts</h1>
+            <h1>featured concerts</h1>
             <div id="home-polaroids" class="polaroids">
                 <a href="buildaproblemtour.html"><img src="images/dodie.jpg" alt="dodie clark"></a>
                 <a href="sourtour.html"><img id="tilt-olivia-right" src="images/olivia.jpeg" alt="olivia rodrigo"></a>
@@ -64,7 +64,7 @@
             </div>
         </div>
         <div class="home-section" class="about">
-            <h1>Thanks for checking out my website! Here are some artists I'm hoping to see in the future :)</h1>
+            <h1>thanks for checking out my website! here are some artists i'm hoping to see in the future :)</h1>
             <div id="artists" class="polaroids">
                 <div class="artist">
                     <a href="https://open.spotify.com/artist/1GmsPCcpKgF9OhlNXjOsbS"><img src="images/lizzymcalpine.jpg" alt="lizzy mcalpine"></a>
