--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
             <div>
                 <p>Hi! My name is Abby, and I'm currently a student at the University of Michigan School of Information studying UX Design. As a final project for my accessible web design & development class this semester, I decided to highlight the different concert experiences I've had this year. I've never been to concerts before 2022, so I thought it would be fun to document the few I've seen.</p>
-                <p>I'm a huge fan of music, especially pop, jazz, and folk (which you'll soon find out as you explore this site)! I also enjoy crocheting, reading, and watching sitcoms in my free time.</p>
+                <p>I'm a huge fan of music, especially pop and jazz (which you'll soon find out as you explore this site)! I also enjoy crocheting, reading, and watching sitcoms in my free time.</p>
                 <p>Thanks for reading, and it's nice to meet you!</p>
                 <div class="cd_links">
                     <a href="https://www.instagram.com/abbyysyp/?hl=en" aria-label="instagram"><i class="fa-brands fa-instagram"></i></a>
@@ -80,21 +80,6 @@
                     <a href="https://open.spotify.com/artist/00x1fYSGhdqScXBRpSj3DW"><img src="images/oliviadean.jpg" alt="olivia dean"></a>
                     <!-- source: https://cache.net-a-porter.com/content/images/story-body-content-v1-0-1639407434779.jpeg/w1900_q65.jpeg -->
                     <p>olivia dean</p>
-                </div>
-                <div class="artist">
-                    <a href="https://open.spotify.com/artist/2hR4h1Cao2ueuI7Cx9c7V8"><img src="images/cavetown.jpg" alt="cavetown"></a>
-                    <!-- source: https://seated.imgix.net/f1df8204-477b-4c6d-a839-d3e0cc7439d5/23bd61a6-29c5-4b9c-8030-f779cbd2b132.jpg -->
-                    <p>cavetown</p>
-                </div>
-                <div class="artist">
-                    <a href="https://open.spotify.com/artist/1JspXUvEv3D9ddMeLNqYWj"><img src="images/flowerovlove.jpg" alt="flowerovlove"></a>
-                    <!-- source: https://dcxvepib5r3t6.cloudfront.net/attachments/file_s3s/6261/2cd9/996e/d800/1373/48ce/original/Flowerovlove_metalmagazine_4.jpg?1650535640 -->
-                    <p>flowerovlove</p>
-                </div>
-                <div class="artist">
-                    <a href="https://open.spotify.com/artist/23E65IfLBGQv0FBrMwCcG2"><img src="images/petermcpoland.PNG" alt="peter mcpoland"></a>
-                    <!-- source: https://64.media.tumblr.com/e96fb9b0b778d0ea148ff3f7ac711b67/6c750a59f19a25f2-2b/s540x810/fe93fb21fb16fdabfd5773133f1cccb2a5a4751d.png -->
-                    <p>peter mcpoland</p>
                 </div>
                 <div class="artist">
                     <a href="https://open.spotify.com/artist/4tuJ0bMpJh08umKkEXKUI5"><img src="images/gracieabrams.JPG" alt="gracie abrams"></a>
