--- a/sourtour.html
+++ b/sourtour.html
@@ -47,7 +47,7 @@
             <p>In March 2022, I was sent an email out of the blue telling me that there would be another opportunity to get tickets, and I received a pre-sale code. I ended up with 4 GA Balcony spots for my friends and I!</p>
             <p>With SOUR being the soundtrack to my year, I was beyond excited to attend. Because both floor and balcony were GA in a venue that held around 5,000 people, we arrived pretty early at 11am and were within the first 100-200 people there.</p>
             <p>We made friends with those in line around us, and took turns picking up lunch from the Detroit Filling Station nearby (yum!). Some cool things happened, like meeting Olivia's tour photographer and handing him a gift I made for her, and my friends and I got featured on Channel 95.5's Instagram story.</p>
-            <p>When we finally entered the venue, we managed to get front row in the section we were in! Below are some photos from the experience, you can click on them to see them up close :)</p>
+            <p>When we finally entered the venue, we managed to get front row in the section we were in! Below are some photos from the experience, you can click on them (in order) to see them up close :)</p>
         </div>
         <div id="sour" class="polaroids">
             <img onclick=enlarge(this) src="images/souremptyvenue.jpg" alt="view of the stage">
